--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/tiger.jpg"" alt=" Picture of Baby Jeffrey"></td>
+      <td><img src="images/tiger.jpg" alt=" Picture of Baby Jeffrey"></td>
       <td>
         <h1>Jeffrey Kosmalski</h1>
         <p><em>COO of <strong><a href="accuproducts.com">Accuproducts International</a></strong>.</em></p>
