--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <hr>
 
   <a href="Hobbies.html">My Hobbies</a>
-  <a href="contacts.html">Contact Me</a>
-  <a href="Inputs.html">Inputs</a>
+  <a href="Contacts.html">Contact Me</a>
+  <a href="inputs.html">Inputs</a>
 </body>
 
 </html>
